tomcatdeploy.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tomcat9v4
  name: tomcat9v4
  namespace: application
spec:
  ports:
  - port: 8891
    protocol: TCP
    targetPort: 8080
  selector:
    app: tomcat-9
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: tomcat9v4
  name: tomcat9v4
  namespace: application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tomcat9v4
  strategy: {}
  template:
    metadata:
      
      labels:
        app: tomcat9v4
    spec:
      volumes:
      - hostPath:
          path: /backup/webapps3
          type: DirectoryOrCreate
        name: webapps3
	  - hostPath:
          path: /backup/conf
          type: DirectoryOrCreate
        name: conf
      containers:
      - image: tomcat:9.0.87
        name: tomcat
        volumeMounts:
        - mountPath: /usr/local/tomcat/webapps
          name: webapps3
        - mountPath: /usr/local/tomcat/conf
          name: conf
